RESOLVED FIXED183615
Bad configuration parameters should make RTCPeerConnection constructor throw
https://bugs.webkit.org/show_bug.cgi?id=183615
Summary Bad configuration parameters should make RTCPeerConnection constructor throw
youenn fablet
Reported 2018-03-13 14:31:18 PDT
Otherwise we might end up with a null backend
Attachments
Patch (4.23 KB, patch)
2018-03-13 16:24 PDT, youenn fablet
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (2.19 MB, application/zip)
2018-03-13 17:59 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (2.65 MB, application/zip)
2018-03-13 20:35 PDT, EWS Watchlist
no flags
Patch (26.98 KB, patch)
2018-03-15 09:54 PDT, youenn fablet
ews-watchlist: commit-queue-
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.18 MB, application/zip)
2018-03-15 11:26 PDT, EWS Watchlist
no flags
Patch (53.64 KB, patch)
2018-03-15 11:33 PDT, youenn fablet
no flags
Patch (53.67 KB, patch)
2018-03-15 12:59 PDT, youenn fablet
no flags
Patch for landing (53.71 KB, patch)
2018-03-15 14:34 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-03-13 16:24:37 PDT
EWS Watchlist
Comment 2 2018-03-13 17:59:37 PDT
Comment on attachment 335743 [details] Patch Attachment 335743 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/6943208 New failing tests: imported/w3c/web-platform-tests/webrtc/RTCConfiguration-iceServers.html imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-constructor.html fast/mediastream/RTCPeerConnection.html
EWS Watchlist
Comment 3 2018-03-13 17:59:38 PDT
Created attachment 335751 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4 2018-03-13 20:35:19 PDT
Comment on attachment 335743 [details] Patch Attachment 335743 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/6945283 New failing tests: imported/w3c/web-platform-tests/webrtc/RTCConfiguration-iceServers.html imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-constructor.html fast/mediastream/RTCPeerConnection.html
EWS Watchlist
Comment 5 2018-03-13 20:35:20 PDT
Created attachment 335758 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Chris Dumez
Comment 6 2018-03-13 20:36:31 PDT
Comment on attachment 335743 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=335743&action=review > Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:337 > + return Exception { TypeError }; Please provide an exception message.
youenn fablet
Comment 7 2018-03-15 09:54:38 PDT
EWS Watchlist
Comment 8 2018-03-15 11:26:12 PDT
Comment on attachment 335854 [details] Patch Attachment 335854 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/6966664 New failing tests: fast/mediastream/RTCPeerConnection-getConfiguration.html fast/scrolling/scroll-to-focused-element-asynchronously.html fast/mediastream/RTCPeerConnection.html
EWS Watchlist
Comment 9 2018-03-15 11:26:14 PDT
Created attachment 335866 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 10 2018-03-15 11:33:45 PDT
youenn fablet
Comment 11 2018-03-15 12:59:38 PDT
Eric Carlson
Comment 12 2018-03-15 14:11:40 PDT
Comment on attachment 335873 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=335873&action=review > Source/WebCore/ChangeLog:9 > + Throw an error whenever underlying libwebrtc set configuration is failing. Nit: "is failing" => "fails" > Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:307 > + return Exception { InvalidModificationError, "IceTransportPolicy do not match" }; Nit: something like "IceTransportPolicy does not match existing policy" would be better. > Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:310 > + return Exception { InvalidModificationError, "IceTransportPolicy do not match" }; Nit: something like "IceTransportPolicy pool size does not match existing pool size" would be better.
youenn fablet
Comment 13 2018-03-15 14:34:46 PDT
Created attachment 335886 [details] Patch for landing
WebKit Commit Bot
Comment 14 2018-03-15 15:41:36 PDT
Comment on attachment 335886 [details] Patch for landing Clearing flags on attachment: 335886 Committed r229645: <https://trac.webkit.org/changeset/229645>
WebKit Commit Bot
Comment 15 2018-03-15 15:41:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 16 2018-03-15 15:42:31 PDT
Note You need to log in before you can comment on or make changes to this bug.