Bad configuration parameters should make RTCPeerConnection constructor throw https://bugs.webkit.org/show_bug.cgi?id=183615

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/webrtc/RTCConfiguration-bundlePolicy-expected.txt:
* web-platform-tests/webrtc/RTCConfiguration-iceServers-expected.txt:
* web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-constructor-expected.txt:

Source/WebCore:

Implement more of https://w3c.github.io/webrtc-pc/#set-pc-configuration.
Throw an error whenever underlying libwebrtc set configuration fails.

Covered by rebased test.

* Modules/mediastream/PeerConnectionBackend.h:
* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::iceServersFromConfiguration):
(WebCore::RTCPeerConnection::initializeConfiguration):
(WebCore::RTCPeerConnection::setConfiguration):
* Modules/mediastream/RTCPeerConnection.js:
(initializeRTCPeerConnection):
* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.h:

LayoutTests:

Removed tests that are subsumed by WPT ones.

* fast/mediastream/RTCPeerConnection-expected.txt: Removed.
* fast/mediastream/RTCPeerConnection-getConfiguration-expected.txt: Removed.
* fast/mediastream/RTCPeerConnection-getConfiguration.html: Removed.
* fast/mediastream/RTCPeerConnection.html: Removed.
* platform/gtk/TestExpectations:
* platform/ios/TestExpectations:


Canonical link: https://commits.webkit.org/199320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229645 268f45cc-cd09-0410-ab3c-d52691b4dbfc